// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.default.addGroup 0 1`] = `undefined`;

exports[`mutations.default.addGroup 1 1`] = `undefined`;

exports[`mutations.default.addGroup 2 1`] = `undefined`;

exports[`mutations.default.addGroup 3 1`] = `undefined`;

exports[`mutations.default.addGroup 4 1`] = `undefined`;

exports[`mutations.default.addGroup 5 1`] = `undefined`;

exports[`mutations.default.setGroupMembers 0 1`] = `
Object {
  "groupId_0": Array [
    Object {
      "address": "address_0",
      "name": "name_0",
      "photoHash": "photoHash_0",
      "status": "",
    },
  ],
}
`;

exports[`mutations.default.setGroupMembers 1 1`] = `
Object {
  "groupId_1": Array [
    Object {
      "address": "address_1",
      "name": "name_1",
      "photoHash": "photoHash_1",
      "status": "",
    },
  ],
}
`;

exports[`mutations.default.setGroupMembers 2 1`] = `
Object {
  "groupId_0": Array [
    Object {
      "address": "address_2",
      "name": "name_2",
      "photoHash": "photoHash_2",
      "status": "",
    },
  ],
}
`;

exports[`mutations.default.setGroupMembers 3 1`] = `
Object {
  "groupId_0": Array [
    Object {
      "address": "address_2",
      "name": "name_2",
      "photoHash": "photoHash_2",
      "status": "",
    },
  ],
  "groupId_1": Array [
    Object {
      "address": "address_1",
      "name": "name_1",
      "photoHash": "photoHash_1",
      "status": "",
    },
  ],
}
`;

exports[`mutations.default.updateGroup 0 1`] = `undefined`;

exports[`mutations.default.updateGroup 1 1`] = `undefined`;

exports[`mutations.default.updateGroup 2 1`] = `undefined`;

exports[`mutations.default.updateGroup 3 1`] = `undefined`;

exports[`mutations.default.updateGroup 4 1`] = `undefined`;

exports[`mutations.default.updateGroup 5 1`] = `undefined`;
